# photo-org

./: .dockerignore  .env.compose.example  .gitignore  CONTRIBUTING.md  Caddyfile  DESIGN.md  Makefile  README.md  ROADMAP.md  compose.ephemeral.yaml  compose.yaml  pyproject.toml
apps/api/: .coverage  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: __main__.py  cli.py  dependencies.py  main.py  migrations.py  openapi_docs.py  path_contract.py  storage.py
apps/api/docker/: __init__.py  entrypoint.py  entrypoint.sh
apps/api/features/: environment.py  error-handling.feature  faceted-search.feature  pagination.feature
apps/api/openapi/: spec.yaml
apps/api/scripts/: generate_openapi.py
apps/api/tests/: conftest.py  test_albums_and_exports_api.py  test_cli.py  test_container_entrypoint.py  test_db_config.py  test_domain_facets.py  test_enums.py  test_face_assignment_api.py  test_face_candidates_api.py  test_face_candidates_service.py  test_face_embedding_backfill_service.py  test_face_suggestion_review_api.py  test_face_suggestions_service.py  test_facets.py  test_ingest.py  test_ingest_common.py  test_ingest_extraction_worker.py  test_ingest_persistence.py  test_ingest_polling.py  test_ingest_queue_api.py  test_ingest_queue_processor.py  test_main.py  test_migrations.py  test_openapi_docs.py  test_operational_activity_api.py  test_pagination.py  test_people_api.py  test_person_representations_service.py  test_photo_detail_api.py  test_photos_api.py  test_processing_faces.py  test_processing_metadata.py  test_queue_store.py  (+10 more)
(+324 files in other folders)
