[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy",
  "psycopg[binary]",
  "pgvector",
  "photoorg-db-schema",
  "pillow",
  "pillow-heif",
  "opencv-python-headless",
  "numpy"
]

[tool.uv.sources]

[project.scripts]
api = "app.__main__:main"
photo-org = "app.cli:main"

[project.optional-dependencies]
test = [
  "behave>=1.2.6",
  "pytest>=8.3",
  "httpx>=0.27",
]
