[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "alembic",
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy",
  "psycopg[binary]",
  "pgvector",
  "photoorg-db-schema",
  "pillow",
  "pillow-heif",
  "opencv-python-headless",
  "numpy"
]

[tool.uv.sources]

[tool.setuptools.packages.find]
include = ["app*"]

[project.scripts]
api = "app.__main__:main"

[project.optional-dependencies]
test = [
  "pytest>=8.3",
  "httpx>=0.27",
]
